--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,8 @@ pyo3 = { version = "*", features = ["abi3-py311", "extension-module"] }
 tao = "*"
 wry = { version = "*", features = ["protocol"] }
 image = "*"
+[target.'cfg(target_os = "windows")'.dependencies]
+windows = { version = "*", features = ["Win32_UI_Shell", "Win32_System_Com"] }
 
 [features]
 default = ["pyo3_backend"]
@@ -20,6 +22,3 @@ pyo3_backend = ["pyo3/extension-module"]
 
 [dev-dependencies]
 pyo3 = { version = "*", features = ["abi3-py311", "auto-initialize"] }
-
-# [env]
-# PYO3_USE_ABI3_FORWARD_COMPATIBILITY = "1"
